[gd_scene load_steps=2 format=3 uid="uid://dgja7j3k1sg4a"]

[ext_resource type="Script" path="res://character_select.gd" id="1_el3en"]

[node name="Character_select" type="Node2D"]
script = ExtResource("1_el3en")

[node name="Label" type="Label" parent="."]
offset_top = 64.0
offset_right = 1920.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 60
text = "Select Player 1 character"
horizontal_alignment = 1

[node name="Character1" type="Button" parent="."]
offset_left = 512.0
offset_top = 256.0
offset_right = 896.0
offset_bottom = 347.0
theme_override_font_sizes/font_size = 60
toggle_mode = true
text = "Character 1"

[node name="Character2" type="Button" parent="."]
offset_left = 1024.0
offset_top = 256.0
offset_right = 1408.0
offset_bottom = 347.0
theme_override_font_sizes/font_size = 60
toggle_mode = true
text = "Character 2"

[node name="Character3" type="Button" parent="."]
offset_left = 512.0
offset_top = 384.0
offset_right = 896.0
offset_bottom = 475.0
theme_override_font_sizes/font_size = 60
toggle_mode = true
text = "Character 3"

[node name="Confirm" type="Button" parent="."]
offset_left = 832.0
offset_top = 576.0
offset_right = 1088.0
offset_bottom = 639.0
theme_override_font_sizes/font_size = 40
text = "Confirm"

[node name="Return" type="Button" parent="."]
offset_left = 896.0
offset_top = 704.0
offset_right = 1024.0
offset_bottom = 754.0
theme_override_font_sizes/font_size = 30
text = "Return"

[node name="1PControls" type="Label" parent="."]
offset_left = 256.0
offset_top = 704.0
offset_right = 460.0
offset_bottom = 929.0
theme_override_font_sizes/font_size = 30
text = "1P Controls:
[A] - Move left
[D] - Move right
[W] - Jump
[Space] - Dash"

[node name="2PControls" type="Label" parent="."]
offset_left = 1280.0
offset_top = 704.0
offset_right = 1664.0
offset_bottom = 929.0
theme_override_font_sizes/font_size = 30
text = "2P Controls:
[ü°ê] - Move left
[ü°í] - Move right
[ü°ë] - Jump
[Shift] - Dash"
horizontal_alignment = 2

[connection signal="pressed" from="Character1" to="." method="_on_character_1_pressed"]
[connection signal="pressed" from="Character2" to="." method="_on_character_2_pressed"]
[connection signal="pressed" from="Character3" to="." method="_on_character_3_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
